--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="//at.alicdn.com/t/font_2023913_ilv6vp6aqgg.js"></script>
   </body>
 </html>
